# src/app/Http/Resources/Currency/CurrencyResource.php
@@ -6,55 +6,55 @@ use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use OpenApi\Attributes as OA;
 
+#[
+    OA\Schema(
+        schema: "CurrencyResource",
+        properties: [
+            "id" => new OA\Property(
+                property: "id",
+                type: "integer",
+                example: "22"
+            ),
+            "num_code" => new OA\Property(
+                property: "num_code",
+                type: "string",
+                example: "840"
+            ),
+            "char_code" => new OA\Property(
+                property: "char_code",
+                type: "string",
+                example: "USD"
+            ),
+            "nominal" => new OA\Property(
+                property: "nominal",
+                type: "integer",
+                example: "1"
+            ),
+            "name" => new OA\Property(
+                property: "name",
+                type: "string",
+                example: "Доллар США"
+            ),
+            "value" => new OA\Property(
+                property: "value",
+                type: "string",
+                example: "90.7493"
+            ),
+            "vunit_rate" => new OA\Property(
+                property: "vunit_rate",
+                type: "string",
+                example: "90.7493"
+            ),
+            "updated_at" => new OA\Property(
+                property: "updated_at",
+                type: "date",
+                example: "2024-03-08 23:26:19"
+            ),
+        ]
+    )
+]
 class CurrencyResource extends JsonResource
 {
-    #[
-        OA\Schema(
-            schema: "CurrencyResource",
-            properties: [
-                "id" => new OA\Property(
-                    property: "id",
-                    type: "integer",
-                    example: "22"
-                ),
-                "num_code" => new OA\Property(
-                    property: "num_code",
-                    type: "string",
-                    example: "840"
-                ),
-                "char_code" => new OA\Property(
-                    property: "char_code",
-                    type: "string",
-                    example: "USD"
-                ),
-                "nominal" => new OA\Property(
-                    property: "nominal",
-                    type: "integer",
-                    example: "1"
-                ),
-                "name" => new OA\Property(
-                    property: "name",
-                    type: "string",
-                    example: "Доллар США"
-                ),
-                "value" => new OA\Property(
-                    property: "value",
-                    type: "string",
-                    example: "90.7493"
-                ),
-                "vunit_rate" => new OA\Property(
-                    property: "vunit_rate",
-                    type: "string",
-                    example: "90.7493"
-                ),
-                "updated_at" => new OA\Property(
-                    property: "updated_at",
-                    type: "date",
-                    example: "2024-03-08 23:26:19"
-                ),
-            ]
-        )
-    ]
     public function toArray(Request $request): array
     {
         return [
